objects/FinanceTransaction.object
<CustomObject>
    <fields>
        <fullName>blng__CreditGLAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit GL Account</label>
        <referenceTo>blng__GLAccount__c</referenceTo>
        <relationshipLabel>Finance Transactions (Credit GL Account)</relationshipLabel>
        <relationshipName>CreditGLAccountFinanceTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__DebitGLAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debit GL Account</label>
        <referenceTo>blng__GLAccount__c</referenceTo>
        <relationshipLabel>Finance Transactions (Debit GL Account)</relationshipLabel>
        <relationshipName>DebitGLAccountFinanceTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__FinanceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Book</label>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Finance Transactions</relationshipLabel>
        <relationshipName>FinanceBookFinanceTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__FinancePeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Period</label>
        <referenceTo>blng__FinancePeriod__c</referenceTo>
        <relationshipLabel>Finance Transactions</relationshipLabel>
        <relationshipName>FinancePeriodFinanceTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__GLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Finance Transactions</relationshipLabel>
        <relationshipName>GLRuleFinanceTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__GLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Finance Transactions</relationshipLabel>
        <relationshipName>GLTreatmentFinanceTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>Name</columns>
        <columns>TotalAmountWithTax</columns>
        <columns>ReferenceEntity</columns>
        <columns>TransactionDate</columns>
        <columns>EffectiveDate</columns>
        <filterScope>Mine</filterScope>
        <label>My Finance Transactions</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>